fixed chart not full height on mobile

--- a/app/components/parts/chart-card/chart-card.module.scss
+++ b/app/components/parts/chart-card/chart-card.module.scss
@@ -59,6 +59,9 @@
       .controls {
         display: none;
       }
+      .chart {
+        height: 100%;
+      }
     }
   }
 }
